refactor: OutputMessage enum 추가